--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/app-icon192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>PokerDegen</title>
-  </head>
+  <!-- Favicon -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />
+
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+
+  <!-- Manifest for Android/Chrome -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>pokerdegen.app</title>
+
+  <meta name="description" content="PokerDegen" />
+
+  <!-- Open Graph (LinkedIn & Facebook) -->
+  <meta property="og:title" content="PokerDegen" />
+  <meta property="og:description" content="Fast poker solver for iOS" />
+  <meta property="og:image" content="https://pokerdegen.app/preview.png" />
+  <meta property="og:image:alt" content="Screenshot of site" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://pokerdegen.app" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card (also used by LinkedIn for sizing) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="PokerDegen" />
+  <meta name="twitter:description" content="Fast poker solver for iOS" />
+  <meta name="twitter:image" content="https://pokerdegen.app/preview.png" />
+
+  <!-- Optional: Fallback image for platforms that don't support OG -->
+  <link rel="image_src" href="https://pokerdegen.app/preview.png" />
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id='root'></div>
   </body>
-</html>
+</head>
