Fix title on tab

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <!-- Manifest for Android/Chrome -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>pokerdegen.app</title>
+  <title>PokerDegen</title>
 
   <meta name="description" content="PokerDegen" />
 
